--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
   <a href="http://github.com/LeahW" data-target="#" class="navbar-brand"><b>GitHub Repository for LeahW</b></a>
   </div>
   </div>
+  <div class="container col-md-12 visible-lg">
+  <br>
+  </div>
   <div class="container col-md-6 col-md-offset-1">
       <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" class="img-responsive img-circle" alt="Photo of Kano Raspberry Pi single board computer, taken by @ATLeah"> </img>
     </div>
-  <div class="col-md-4 emptyrow"></div>
+  <div class="col-md-4 visible-lg"> <br> </div>
   <div class="container well col-md-4">
    <h3><a href="https://LeahW.github.io/ByteBuilder.html"> ByteBuilder </a></a></h3>
  <br>
