--- a/index.html
+++ b/index.html
@@ -37,12 +37,18 @@
       <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" class="img-responsive img-circle" alt="Photo of Kano Raspberry Pi single board computer, taken by @ATLeah"> </img>
     </div>
   <div class="col-md-4 visible-lg"> <br> </div>
+  <div class="container col-md-4 visible-lg">
+  <br>
+  </div>
   <div class="container well col-md-4">
    <h3><a href="https://LeahW.github.io/ByteBuilder.html"> ByteBuilder </a></a></h3>
  <br>
  <p> 8-bit to UTF-8 and Decimal converter built using JavaScript.</p>
   </div>
   <div class="container col-md-4">
+  <br>
+  </div>
+  <div class="container col-md-4 visible-lg">
   <br>
   </div>
   <div class="container well col-md-4">
