--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <style>
     .body {
-     background-color: #DADAE6;
+     background-color: #535357;
     }
     .whitespace {
      margin: 15px;
