--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>LeahW on GitHub: ByteBuilder, Regular Expression Challenges, and other side projects.</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <style>
-    .body {
+    body {
      background: #535357;
     }
     .whitespace {
