--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <style>
     body {
-     background: #535357;
+     background: #AAAAC6;
+    }
+    ul li {
+     font-size: 125%;
     }
     .whitespace {
      margin: 15px;
