--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     ul li {
      font-size: 125%;
     }
+    div {
+     background: #E3E3E4;
+    }
     .whitespace {
      margin: 15px;
     }
