--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     .navbar {
      background: #E3E3E4;
     }
+    .well {
+      background: #E3E3E4;
+    }
     .whitespace {
      margin: 15px;
     }
