--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      color: #003366;
     }
     .navbar {
-     background: #E3E3E4;
+     background: #BABAD4;
     }
     .well {
       background: #E3E3E4;
@@ -49,7 +49,7 @@
   <div class="container col-md-6 col-md-offset-1">
       <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" class="img-responsive img-circle" alt="Photo of Kano Raspberry Pi single board computer, taken by @ATLeah"> </img>
     </div>
-  <div class="col-md-4 visible-lg"> <br> </div>
+  <div class="col-md-4 visible-lg"> <br> <br> </div>
   <div class="container col-md-4 visible-lg">
   <br>
   </div>
