--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      color: #003366;
     }
     .navbar {
-     background: #BABAD4;
+     background: #DCDCEA;
     }
     .well {
       background: #E3E3E4;
