--- a/ByteBuilder.html
+++ b/ByteBuilder.html
@@ -16,11 +16,11 @@
   width: 1px;
 }
 .board {
-  background: #DCDCEA;
+  background: ##9494B8;
   color: #405290;
 }
 .block {
-  background: #503250;
+  background: #420082;
   color: #EDEDA3;
 }
 .block1 {
