--- a/ByteBuilder.html
+++ b/ByteBuilder.html
@@ -24,15 +24,15 @@
   color: #EDEDA3;
 }
 .block1 {
-  color: #FFADFF;
+  color: #00527A;
   font-size: 130%;
 }
 .block2 {
-  color: #FFADFF;
+  color: #00527A;
   font-size: 130%;
 }
 .block3 {
-  color: #FFADFF;
+  color: #00527A;
   font-size: 130%;
 }
 .alive {
