--- a/regex.html
+++ b/regex.html
@@ -50,7 +50,7 @@
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script>
-var sampleText = 'I am a Stay at Home Mom with a background in Tech Support. Interested in modification projects for Kano and Robomow, as well as Front-end web design.';
+var sampleText = 'Welcome to my GitHub page! I hope you will enjoy your visit! :-)';
 $('.fAndR').on('click', function() {
  
   var findText = prompt("Please enter any one word from above paragraph");
