--- a/Board.html
+++ b/Board.html
@@ -9,13 +9,16 @@
 <style>
 .board {
 background: blue;
+color: yellow;
 }
 </style>
 </head>
-Board
 <body>
-<div class="board">
-Start
+<div class="container well col-md-8 col-md-offset-2">
+Board
+ <div class="board">
+  Start
+ </div>
 </div>
 </body>
 </html>
