--- a/Board.html
+++ b/Board.html
@@ -14,7 +14,7 @@ color: yellow;
 </style>
 </head>
 <body>
-<div class="container row col-md-12"></div>
+<div class="container row col-md-12"><br></div>
 <div class="container well col-md-8 col-md-offset-2">
 Board
  <div class="board">
