--- a/Board.html
+++ b/Board.html
@@ -29,8 +29,8 @@ Board
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script>
   $('roll').on ('click')function() {
-   $('.board').addClass('.go');
-    }
+   $('.board').append(Math.random()*6);
+    )};
   </script>
 </body>
 </html>
