--- a/Board.html
+++ b/Board.html
@@ -32,7 +32,7 @@ Board
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script>
   $('.roll').on('click', function() {
-   $('.board').append(Math.random()*6);
+   $('.board').append(6*(Math.random()));
    });
   </script>
 </body>
