--- a/Board.html
+++ b/Board.html
@@ -33,7 +33,7 @@ Board
   <script>
   $('.roll').on('click', function() {
    $('.board').append(6*(Math.random()));
-   $('.board').append(<br>);
+   $('.board').append('<br>');
    });
   </script>
 </body>
