--- a/Board.html
+++ b/Board.html
@@ -33,14 +33,15 @@ Board
   <script>
   $('.roll').on('click', function() {
    $('.board').append('<br>');
-   switch ('.board').append(6*(Math.random()));
+   switch (6*(Math.random())) {
      case < 3:
       $('.board').append('less than three');
      case < 4:
       $('.board').append('four');
      case < 5:
       $('.board').append('five');
-     });
+   };
+  });
   </script>
 </body>
 </html>
