--- a/Board.html
+++ b/Board.html
@@ -33,19 +33,20 @@ Board
   <script>
   $('.roll').on('click', function() {
     switch (Math.random()*6) {
-      case 1:
-      case 2:
-      case 3:
-      default: 
-          $('.board').append("Looking forward to the Weekend");
-          break; 
-      case 4:
-      case 5:
-         $('.board').append("Soon it is Weekend");
-          break; 
-      case 0:
-      case 6:
-         $('.board').append("It is Weekend");
+      case <1:
+       $('.board').append("1");
+      case <2:
+       $('.board').append("2");
+      case <3:
+       $('.board').append("3");
+      case <4:
+       $('.board').append("4");
+      case <5:
+       $('.board').append("1");
+      case <6:
+       $('.board').append("1");
+      default:
+       $('.board').append("wat");
     };
 });
   </script>
