--- a/Board.html
+++ b/Board.html
@@ -32,7 +32,8 @@ Board
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script>
   $('.roll').on('click', function() {
-    switch (Math.random()*6) {
+   rando = Math.random()*6;
+    switch (rando) {
       case <1:
        $('.board').append("1");
       case <2:
