--- a/Board.html
+++ b/Board.html
@@ -34,7 +34,15 @@ Board
   $('.roll').on('click', function() {
    rando = Math.random()*6;
    $('.board').append(rando);
-   });
+   switch rando {
+    case < 1:
+     $('.board').append("1");
+    case < 2:
+     $('.board').append("2");
+    case < 3:
+     $('.board').append("3");
+   }
+  });
   </script>
 </body>
 </html>
