--- a/Board.html
+++ b/Board.html
@@ -27,6 +27,16 @@ Board
   Start
   <button class="roll">Roll the Dice!</button>
  </div>
+ <div class="container well col-md-8 col-md-offset-2">
+  <div class="container col-md-1 block A1"> 1 </div>
+  <div class="container col-md-1 block A2"> 2 </div>
+  <div class="container col-md-1 block A3"> 3 </div>
+  <div class="container col-md-1 block A4"> 4 </div>
+  <div class="container col-md-1 block A5"> 5 </div>
+  <div class="container col-md-1 block A6"> 6 </div>
+  <div class="container col-md-1 block A7"> 7 </div>
+  <div class="container col-md-1 block A8"> 8 </div>
+ </div>
 </div>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
