--- a/Board.html
+++ b/Board.html
@@ -41,6 +41,7 @@ Board
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script>
+  count = 0;
   $('.roll').on('click', function() {
    rando = Math.random()*6;
    if (rando < 1) {
