--- a/Board.html
+++ b/Board.html
@@ -17,6 +17,10 @@ color: orange;
  button {
   background: gray;
  }
+ .alive {
+  background: #66FF33;
+  color: #000000;
+}
 </style>
 </head>
 <body>
@@ -56,8 +60,28 @@ Board
      count = count+5;
    } else {
     count = count+6;
-   }
+   };
+  };
    $('.board').append("<br>" + count);
+   if (count == 1) {
+    $('.A1').addClass('alive');
+   } else if (count == 2) {
+    $('.A2').addClass('alive');
+   } else if (count == 3) {
+    $('.A3').addClass('alive');
+   } else if (count == 4) {
+    $('.A4').addClass('alive');
+   } else if (count == 5) {
+    $('.A5').addClass('alive');
+   } else if (count == 6) {
+    $('.A6').addClass('alive');
+   } else if (count == 7) {
+    $('.A7').addClass('alive');
+   } else if (count == 8) {
+    $('.A8').addClass('alive');
+   } else {
+    $('.board').append("Game over!");
+   };
   });
   </script>
 </body>
