--- a/Board.html
+++ b/Board.html
@@ -40,6 +40,14 @@ Board
   <div class="container col-md-1 block A6"> 6 </div>
   <div class="container col-md-1 block A7"> 7 </div>
   <div class="container col-md-1 block A8"> 8 </div>
+  <div class="container col-md-1 block A9"> 9 </div>
+  <div class="container col-md-1 block A10"> 10 </div>
+  <div class="container col-md-1 block A11"> 11 </div>
+  <div class="container col-md-1 block A12"> 12</div>
+  <div class="container col-md-1 block A13"> 13 </div>
+  <div class="container col-md-1 block A14"> 14 </div>
+  <div class="container col-md-1 block A15"> 15 </div>
+  <div class="container col-md-1 block A16"> 16 </div>
  </div>
 </div>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
@@ -78,6 +86,22 @@ Board
     $('.A7').addClass('alive');
    } else if (count == 8) {
     $('.A8').addClass('alive');
+   } else if (count == 9)
+    $('.A9').addClass('alive');
+   } else if (count == 10) {
+    $('.A10').addClass('alive');
+   } else if (count == 11) {
+    $('.A11').addClass('alive');
+   } else if (count == 12) {
+    $('.A12').addClass('alive');
+   } else if (count == 13) {
+    $('.A14').addClass('alive');
+   } else if (count == 15) {
+    $('.A15').addClass('alive');
+   } else if (count == 16) {
+    $('.A16').addClass('alive');
+   } else if (count == 17) {
+    $('.A17').addClass('alive');
    } else {
     $('.board').append("Game over!");
    };
