--- a/Board.html
+++ b/Board.html
@@ -86,7 +86,7 @@ Board
     $('.A7').addClass('alive');
    } else if (count == 8) {
     $('.A8').addClass('alive');
-   } else if (count == 9)
+   } else if (count == 9) {
     $('.A9').addClass('alive');
    } else if (count == 10) {
     $('.A10').addClass('alive');
