--- a/Board.html
+++ b/Board.html
@@ -73,37 +73,53 @@ Board
    if (count == 1) {
     $('.A1').addClass('alive');
    } else if (count == 2) {
+    $('.block').removeClass('alive');
     $('.A2').addClass('alive');
    } else if (count == 3) {
+    $('.block').removeClass('alive');
     $('.A3').addClass('alive');
    } else if (count == 4) {
+    $('.block').removeClass('alive');
     $('.A4').addClass('alive');
    } else if (count == 5) {
+    $('.block').removeClass('alive');
     $('.A5').addClass('alive');
    } else if (count == 6) {
+    $('.block').removeClass('alive');
     $('.A6').addClass('alive');
    } else if (count == 7) {
+    $('.block').removeClass('alive');
     $('.A7').addClass('alive');
    } else if (count == 8) {
+    $('.block').removeClass('alive');
     $('.A8').addClass('alive');
    } else if (count == 9) {
+    $('.block').removeClass('alive');
     $('.A9').addClass('alive');
    } else if (count == 10) {
+    $('.block').removeClass('alive');
     $('.A10').addClass('alive');
    } else if (count == 11) {
+    $('.block').removeClass('alive');
     $('.A11').addClass('alive');
    } else if (count == 12) {
+    $('.block').removeClass('alive');
     $('.A12').addClass('alive');
    } else if (count == 13) {
+    $('.block').removeClass('alive');
     $('.A14').addClass('alive');
    } else if (count == 15) {
+    $('.block').removeClass('alive');
     $('.A15').addClass('alive');
    } else if (count == 16) {
+    $('.block').removeClass('alive');
     $('.A16').addClass('alive');
    } else if (count == 17) {
+    $('.block').removeClass('alive');
     $('.A17').addClass('alive');
    } else {
     $('.board').append("Game over!");
+    count=0;
    };
   });
   </script>
