--- a/Board.html
+++ b/Board.html
@@ -111,6 +111,9 @@ Board
     $('.A12').addClass('alive');
    } else if (count == 13) {
     $('.block').removeClass('alive');
+    $('.A13').addClass('alive');
+   } else if (count == 14) {
+    $('.block').removeClass('alive');
     $('.A14').addClass('alive');
    } else if (count == 15) {
     $('.block').removeClass('alive');
