Embedded viewer test

--- a/Board.html
+++ b/Board.html
@@ -25,6 +25,9 @@ color: orange;
 </head>
 <body>
 <div class="container row col-md-12"><br></div>
+<div class="viewer">
+ <iframe src="http://www.screenleap.com/2967/LeahW" width="800" height="600"></iframe>
+</div>
 <div class="container well col-md-8 col-md-offset-2">
 Board
  <div class="board">
