--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     
   <div class="container">
   <ul class='nav navbar-nav navbar-right'>
-    <li><a href="http://www.RobomowATL.com">RobomowATL.com</a></li>
+    <li><a href="https://athomecrypto.github.io/">AtHomeCrypto</a></li>
     <li><a href="http://www.linkedin.com/pub/leah-williamson/a6/358/b56">Connect with me on Linked In!</a></li>
     <li><a href="http://twitter.com/ATLeah">Follow @ATLeah on Twitter!</a></li>
   </ul>
