Test Customer Support embed

--- a/index.html
+++ b/index.html
@@ -60,6 +60,21 @@
   </div>
   <div class="container col-md-4">
   <br>
+<div class="container well col-md-4">
+ <h4> Testing Customer Support Solution </h4>
+<script type="text/javascript">
+    var screenleapCompanyId = 127;
+    var screenleapAccountId = 'support';
+    var screenleapBaseUrl = document.location.protocol + '//www.screenleap.com';
+    (function() {
+        var sl = document.createElement('script'); sl.type = 'text/javascript'; sl.async = true;
+        sl.src = screenleapBaseUrl + '/js/support.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(sl, s);
+    })();
+</script>
+  </div>
+  <div class="container col-md-4">
+  <br>
   </div>
   <div class="container col-md-4 visible-lg">
   <br>
