--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
     
   <div class="container">
   <ul class='nav navbar-nav navbar-right'>
-    <li><a href="https://athomecrypto.github.io/">AtHomeCrypto</a></li>
+    <li><a href="https://athomecrypto.com/">AtHomeCrypto</a></li>
     <li><a href="http://www.linkedin.com/pub/leah-williamson/a6/358/b56">Connect with me on Linked In!</a></li>
-    <li><a href="http://twitter.com/ATLeah">Follow @ATLeah on Twitter!</a></li>
+    <li><a href="http://twitter.com/AtHomeCrypto">Follow @AtHomeCrypto on Twitter!</a></li>
   </ul>
 </div>
   
