--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
   </style>
   </head>
-  
+
   <body>
   <div class="navbar navbar-default navbar-default-top">
   <div class="container">
@@ -54,23 +54,28 @@
   <br>
   </div>
   <div class="container well col-md-4">
-   <h4><a href="https://LeahW.github.io/ByteBuilder.html"> ByteBuilder </a></a></h4>
+   <h3><a href="https://LeahW.github.io/ByteBuilder.html"> ByteBuilder </a></a></h3>
  <br>
  <p> 8-bit to UTF-8 and Decimal converter built using JavaScript.</p>
   </div>
-  <div class="container col-md-4">
   <br>
+  <div class="container well col-md-4">
+    <h3><a href="https://LeahW.github.io/ATH.html"> Hash functions  </a></h3>
+  <br>
+  <p>  Exercises using JavaScript hash libraries </p>
+  <div class="container col-md-4">
+  </div>
   </div>
   <div class="container col-md-4 visible-lg">
   <br>
   </div>
   <div class="container well col-md-4">
-   <h4><a href="https://LeahW.github.io/regex.html"> Regex </a></a></h4>
+   <h3><a href="https://LeahW.github.io/regex.html"> Regex </a></a></h3>
  <br>
  <p> Coding challenges that use regular expressions.</p>
   </div>
     <div class="row col-md-12 whitespace"></div>
-  
+
   <div class="container well col-md-10 col-md-offset-1">
     <div class="row text-center">
      <h2><b>GitHub Portfolio for LeahW</b></h2>
@@ -79,9 +84,9 @@
   </div>
 </div>
 
- 
+
 </div>
-    
+
   <div class="container">
   <ul class='nav navbar-nav navbar-right'>
     <li><a href="https://athomecrypto.com/">AtHomeCrypto</a></li>
@@ -89,7 +94,7 @@
     <li><a href="http://twitter.com/AtHomeCrypto">Follow @AtHomeCrypto on Twitter!</a></li>
   </ul>
 </div>
-  
+
   <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script>
@@ -99,7 +104,7 @@
           $(this).tab('show');
         });
       });
-     
+
 
   </script>
   </body>
