--- a/bracket.html
+++ b/bracket.html
@@ -5,8 +5,8 @@
 <meta name="author" content="Leah Williamson">
 <head>
 <title>bracket</title>
+<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
-
 <body>
 <button id="Flip1" onclick="flip1 ()"> Single coin flip </button>
 <br>
