Added Bracket section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
  <p> 8-bit to UTF-8 and Decimal converter built using JavaScript.</p>
   </div>
   <br>
+</div>
+  <div class="container well col-md-4">
+   <h3><a href="https://LeahW.github.io/Bracket.html"> March Madness Bracket Helper </a></a></h3>
+ <br>
+ <p> Use Math.Random to decide bracket winners, with higher seed team increasingly less likely to be chosen in match-ups with lower-seeded teams</p>
+  </div>
+  <br>
   <div class="container well col-md-4">
     <h3><a href="https://LeahW.github.io/ATH.html"> Hash functions  </a></h3>
   <br>
