removing image offset

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="container col-md-12 visible-lg">
   <br>
   </div>
-  <div class="container col-md-6 col-md-offset-1">
+  <div class="container col-md-6">
 <br>
 <br>
 <br>
