Adding offset to menu options

--- a/index.html
+++ b/index.html
@@ -58,27 +58,24 @@
   <div class="col-md-4 visible-lg"> <br> <br> </div>
   <div class="container col-md-4 visible-lg">
   </div>
-  <div class="container well col-md-4">
+  <div class="container well col-md-4 col-md-offset-1">
    <h3><a href="https://LeahW.github.io/ByteBuilder.html"> ByteBuilder </a></a></h3>
  <p> 8-bit to UTF-8 and Decimal converter built using JavaScript.</p>
   </div>
   <br>
 </div>
-  <div class="container well col-md-4">
+  <div class="container well col-md-4 col-md-offset-1">
    <h3><a href="https://LeahW.github.io/Bracket.html"> March Madness Bracket Helper </a></a></h3>
  <p> Use Math.Random to decide bracket winners, with higher seed team increasingly less likely to be chosen in match-ups with lower-seeded teams</p>
   </div>
   <br>
-  <div class="container well col-md-4">
+  <div class="container well col-md-4 col-md-offset-1">
     <h3><a href="https://LeahW.github.io/ATH.html"> Hash functions  </a></h3>
   <p>  Exercises using JavaScript hash libraries </p>
   <div class="container col-md-4">
   </div>
   </div>
-  <div class="container col-md-4 visible-lg">
-  <br>
-  </div>
-  <div class="container well col-md-4">
+  <div class="container well col-md-4 col-md-offset-1">
    <h3><a href="https://LeahW.github.io/regex.html"> Regex </a></a></h3>
  <p> Coding challenges that use regular expressions.</p>
   </div>
