Changed upper to lower case in bracket.html link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <br>
 </div>
   <div class="container well col-md-4 col-md-offset-1">
-   <h3><a href="https://LeahW.github.io/Bracket.html"> March Madness Bracket Helper </a></a></h3>
+   <h3><a href="https://LeahW.github.io/bracket.html"> March Madness Bracket Helper </a></a></h3>
  <p> Use Math.Random to decide bracket winners, with higher seed team increasingly less likely to be chosen in match-ups with lower-seeded teams</p>
   </div>
   <br>
