--- a/index.html
+++ b/index.html
@@ -2,114 +2,21 @@
 <html lang="en">
  <head>
  <meta charset="UTF-8">
- <meta name="description" content="Self taught computer programmer applying code bootcamp lessons and web tutorials on a GitHub page">
- <meta name="keywords" content="code bootcamp, coding tutorials, Regex, Regular Expressions, HTML, CSS, JavaScript, jQuery, Bootstrap, GitHub">
+ <meta name="description" content="Teaching myself to build a GitHub page featuring art work made by my kids">
+ <meta name="keywords" content="webcomic, the pig patrol">
  <meta name="author" content="Leah Williamson">
  <meta name="viewport" content="width=device-width">
-  <title>LeahW on GitHub: ByteBuilder, Regular Expression Challenges, and other side projects.</title>
+  <title>LeahW on GitHub: practicing code and publishing webcomic art from my kids </title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <style>
-    body {
-     background: #AAAAC6;
-    }
-    a {
-     font-size: 100%;
-     color: #003366;
-    }
-    .navbar {
-     background: #DCDCEA;
-    }
-    .well {
-      background: #E3E3E4;
-    }
-    .whitespace {
-     margin: 15px;
-    }
-    .img-circle {
-     border: 5px solid gray;
-    }
-    .emptyrow {
-     margin: 10px 40px;
-    }
-    @-ms-viewport {
-     width: device-width;
-    }
   </style>
   </head>
-
   <body>
-  <div class="navbar navbar-default navbar-default-top">
-  <div class="container">
-  <a href="http://github.com/LeahW" data-target="#" class="navbar-brand"><b>GitHub Repository for LeahW</b></a>
-  </div>
-  </div>
-  <div class="container col-md-12 visible-lg">
-  <br>
-  </div>
-  <div class="container col-md-6">
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-    </div>
-  <div class="col-md-4 visible-lg"> <br> <br> </div>
-  <div class="container col-md-4 visible-lg">
-  </div>
-  <div class="container well col-md-4 col-md-offset-1">
-   <h3><a href="https://LeahW.github.io/ByteBuilder.html"> ByteBuilder </a></a></h3>
- <p> 8-bit to UTF-8 and Decimal converter built using JavaScript.</p>
-  </div>
-  <br>
-</div>
-  <div class="container well col-md-4 col-md-offset-1">
-   <h3><a href="https://LeahW.github.io/bracket.html"> March Madness Bracket Helper </a></a></h3>
- <p> Use Math.Random to decide bracket winners, with higher seed team increasingly less likely to be chosen in match-ups with lower-seeded teams</p>
-  </div>
-  <br>
-  <div class="container well col-md-4 col-md-offset-1">
-    <h3><a href="https://LeahW.github.io/ATH.html"> Hash functions  </a></h3>
-  <p>  Exercises using JavaScript hash libraries </p>
-  <div class="container col-md-4">
-  </div>
-  </div>
-  <div class="container well col-md-4 col-md-offset-1">
-   <h3><a href="https://LeahW.github.io/regex.html"> Regex </a></a></h3>
- <p> Coding challenges that use regular expressions.</p>
-  </div>
-    <div class="row col-md-12 whitespace"></div>
-
-  <div class="container well col-md-10 col-md-offset-1">
-    <div class="row text-center">
-     <h2><b>GitHub Portfolio for LeahW</b></h2>
-     <h3>Content frequently changes. Feel free to click around and explore!</h3>
-     <br>
-  </div>
-</div>
-
-
-</div>
-
-  <div class="container">
-  <ul class='nav navbar-nav navbar-right'>
-    <li><a href="https://athomecrypto.com/">AtHomeCrypto</a></li>
-    <li><a href="http://www.linkedin.com/pub/leah-williamson/a6/358/b56">Connect with me on Linked In!</a></li>
-    <li><a href="http://twitter.com/AtHomeCrypto">Follow @AtHomeCrypto on Twitter!</a></li>
-  </ul>
-</div>
-
-  <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <h1> The Pig Patrol! </h1>
+    <h2> Comic art by Grant Williamson </h2>
+    <p> The Pig Patrol is a team of superhero guinea pigs, inspired by real guinea pigs that live in Grant's third grade classroom </p>
+    <img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-23%20at%2011.04.43%20AM.jpeg?raw=true"> </img>
   <script>
-    $(function() {
-        $('.nav-tabs a').click(function (e) {
-          e.preventDefault();
-          $(this).tab('show');
-        });
-      });
-
-
   </script>
   </body>
   </html>
