--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 <br>
 <h2> Vol. 1, Issue 2 </h2>
 <img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-31%20at%204.58.23%20PM.jpeg?raw=true"> </img>
+<br>
+<h2> Vol. 1, Issue 3 </h2>
+<img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-03-03%20at%205.33.19%20PM.jpeg?raw=true"> </img>
   <script>
   </script>
   </body>
