--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <title>LeahW on GitHub: practicing code and publishing webcomic art from my kids </title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <style>
+    body {
+      background-color: #009085;
+    font-family: fantasy;
+    font-size: 20px;
+    text-align: center;
+    }
+    .comic {
+
+    }
+
   </style>
   </head>
   <body>
@@ -17,13 +27,19 @@
     <p> The Pig Patrol is a team of superhero guinea pigs, inspired by real guinea pigs that live in Grant's third grade classroom </p>
 <br>
 <h2> Vol. 1, Issue 1 </h2>
-    <img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-23%20at%2011.04.43%20AM.jpeg?raw=true"> </img>
+<div class="comic">
+    <img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-23%20at%2011.04.43%20AM.jpeg?raw=true" height="300px"> </img>
+</div>
 <br>
 <h2> Vol. 1, Issue 2 </h2>
-<img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-31%20at%204.58.23%20PM.jpeg?raw=true"> </img>
+<div class="comic">
+<img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-31%20at%204.58.23%20PM.jpeg?raw=true" height="300px"> </img>
+</div>
 <br>
 <h2> Vol. 1, Issue 3 </h2>
-<img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-03-03%20at%205.33.19%20PM.jpeg?raw=true"> </img>
+<div class="comic"
+<img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-03-03%20at%205.33.19%20PM.jpeg?raw=true" height="300px"> </img>
+</div>
   <script>
   </script>
   </body>
