--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 <br>
 <h2> Vol. 1, Issue 1 </h2>
 <div class="comic">
-    <img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-23%20at%2011.04.43%20AM.jpeg?raw=true" height="300px"> </img>
+    <img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-23%20at%2011.04.43%20AM.jpeg?raw=true" height="300px" onclick="location.href='https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-23%20at%2011.04.43%20AM.jpeg?raw=true.html';"> </img>
 </div>
 <br>
 <h2> Vol. 1, Issue 2 </h2>
 <div class="comic">
-<img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-31%20at%204.58.23%20PM.jpeg?raw=true" height="300px"> </img>
+<img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-31%20at%204.58.23%20PM.jpeg?raw=true" height="300px" onclick="location.href='https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-31%20at%204.58.23%20PM.jpeg?raw=true.html';"> </img>
 </div>
 <br>
 <h2> Vol. 1, Issue 3 </h2>
-<div class="comic"
-<img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-03-03%20at%205.33.19%20PM.jpeg?raw=true" height="300px"> </img>
+<div class="comic">
+<img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-03-03%20at%205.33.19%20PM.jpeg?raw=true" height="300px" onclick="location.href='https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-03-03%20at%205.33.19%20PM.jpeg?raw=true.html';"> </img>
 </div>
   <script>
   </script>
