list issues horizontally

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     font-size: 20px;
     text-align: center;
     }
+    h1 {
+      font-size: 60px;
+    }
     .comic {
-
+display: inline-block;
+padding: 8px;
     }
 
   </style>
@@ -26,18 +30,16 @@
     <h2> Comic art by Grant Williamson </h2>
     <p> The Pig Patrol is a team of superhero guinea pigs, inspired by real guinea pigs that live in Grant's third grade classroom </p>
 <br>
-<h2> Vol. 1, Issue 1 </h2>
 <div class="comic">
+<h2> Vol. 1, Issue 1 </h2>
     <img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-23%20at%2011.04.43%20AM.jpeg?raw=true" height="300px" onclick="location.href='https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-23%20at%2011.04.43%20AM.jpeg?raw=true.html';"> </img>
 </div>
-<br>
-<h2> Vol. 1, Issue 2 </h2>
 <div class="comic">
+  <h2> Vol. 1, Issue 2 </h2>
 <img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-31%20at%204.58.23%20PM.jpeg?raw=true" height="300px" onclick="location.href='https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-31%20at%204.58.23%20PM.jpeg?raw=true.html';"> </img>
 </div>
-<br>
-<h2> Vol. 1, Issue 3 </h2>
 <div class="comic">
+  <h2> Vol. 1, Issue 3 </h2>
 <img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-03-03%20at%205.33.19%20PM.jpeg?raw=true" height="300px" onclick="location.href='https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-03-03%20at%205.33.19%20PM.jpeg?raw=true.html';"> </img>
 </div>
   <script>
