--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
  <meta charset="UTF-8">
  <meta name="description" content="Teaching myself to build a GitHub page featuring art work made by my kids">
  <meta name="keywords" content="webcomic, the pig patrol">
- <meta name="author" content="Leah Williamson">
+ <meta name="author" content="Grant Williamson">
  <meta name="viewport" content="width=device-width">
   <title>LeahW on GitHub: practicing code and publishing webcomic art from my kids </title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <style>
     body {
-      background-color: #009085;
-    font-family: fantasy;
-    font-size: 20px;
+      background-color: #9990ff;
+    font-family: "trebuchet MS";
+    font-size: 25px;
     text-align: center;
+
     }
     h1 {
-      font-size: 60px;
+      font-size: 65px;
     }
     .comic {
 display: inline-block;
@@ -29,7 +30,9 @@ padding: 8px;
     <h1> The Pig Patrol! </h1>
     <h2> Comic art by Grant Williamson </h2>
     <p> The Pig Patrol is a team of superhero guinea pigs, inspired by real guinea pigs that live in Grant's third grade classroom </p>
-<br>
+<frame> click the comics for full view! </frame>
+<marquee>
+
 <div class="comic">
 <h2> Vol. 1, Issue 1 </h2>
     <img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-23%20at%2011.04.43%20AM.jpeg?raw=true" height="300px" onclick="location.href='https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-01-23%20at%2011.04.43%20AM.jpeg?raw=true.html';"> </img>
@@ -42,6 +45,7 @@ padding: 8px;
   <h2> Vol. 1, Issue 3 </h2>
 <img src="https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-03-03%20at%205.33.19%20PM.jpeg?raw=true" height="300px" onclick="location.href='https://github.com/LeahW/LeahW.github.io/blob/master/WhatsApp%20Image%202021-03-03%20at%205.33.19%20PM.jpeg?raw=true.html';"> </img>
 </div>
+</marquee>
   <script>
   </script>
   </body>
